<resources>
    <string name="map_key">AIzaSyAfWDWUfQ6jzD6aUBAUeaaKMZ65w8ZB1Es</string>
    <string name="app_name">FitMY</string>
    <string name="password">Password</string>
    <string name="gorgot_password">Forgot Password ?</string>
    <string name="email_hint">Enter Email</string>
    <string name="facility_list">Sign Up</string>
    <string name="Mandatory_Room">Mandatory Room</string>
    <string name="password_hint">Enter Password</string>
    <string name="User_Type">User Type</string>
    <string name="Category_Type">Category Type</string>
    <string name="User">User</string>
    <string name="Civil_servants">Civil servants</string>
    <string name="User_ID">User ID</string>
    <string name="Password">Password</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Enter_the_same_Password">Enter the same Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Email">Email</string>
    <string name="bd">Date of Birth</string>
    <string name="Enter_your_email">Enter your email</string>
    <string name="birthday">Enter date of birth</string>
    <string name="Full_name">Full name</string>
    <string name="Enter_your_full_name">Enter your full name</string>
    <string name="Gender">Gender</string>
    <string name="Nation">Nation</string>
    <string-array name="Citizenship">
        <item>Permanent</item>
        <item>Temporary</item>

    </string-array>
    <string name="No_phone_number">Phone Number</string>
    <string name="Enter_the_phone_number">Enter the phone number</string>
    <string name="Office_Tel_No">Office Tel No</string>
    <string name="Enter_the_Office_Phone_Number">Enter the Office Phone Number</string>
    <string name="Office_Fax_No">Office Fax No</string>
    <string name="Latest_Alamas">Recent Address</string>
    <string name="adress_hint">Enter your Recent Address</string>
    <string name="Enter_the_Office_Fax_No">Enter the Office Fax No</string>
    <string name="Enter_Recent_Address">Enter Recent Address</string>
    <string name="Zip_code">Zip code</string>
    <string name="Enter_the_area_zip_code">Enter the area zip code</string>
    <string name="City">City</string>
    <string name="Enter_the_City_Name">Enter the City Name</string>
    <string name="State">State</string>
    <string name="Negative">Negative</string>
    <string name="Country">Country</string>
    <string name="Come_back">Back</string>
    <string name="agree">I agree with you</string>
    <string name="trems_and_conditions">Terms and conditions</string>
    <string name="latest">The latest</string>
    <string name="hieght">Height</string>
    <string name="wieght">Weight</string>
    <string name="hieght_hint">Height in cm</string>
    <string name="wieght_hint">Weight in kg</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="tv_ia_01">PREV</string>
    <string name="tv_ia_02">NEXT</string>
    <string name="tv_ia_p01_01">WELCOME</string>
    <string name="tv_ia_p01_02">TO</string>
    <string name="tv_ia_p01_03">FIT MALAYSIA APP</string>
    <string name="tv_ia_p02_01">LIVE HEALTHIER</string>
    <string name="tv_ia_p02_02">Performing exercise such as walking, running and cycling for healthy body and mind.</string>
    <string name="tv_ia_p03_01">TRACK YOUR EXERCISE</string>
    <string name="tv_ia_p03_02">Keep track of your daily activities easily and accurately. Improve your lifestyle by reaching your daily and weekly goals.</string>
    <string name="tv_ia_p04_01">COLLECT AND REDEEM REWARD</string>
    <string name="tv_ia_p04_02">Collect FitPoint and redeem exciting gifts and vouchers</string>
    <string name="tv_ia_p05_01">BOOK FACILITIES</string>
    <string name="tv_ia_p05_02">Book sports facilities using your FitPoints</string>
    <string name="tv_sa_01">LETS START LIVING FIT</string>
    <string name="tv_sa_02">Are you...</string>
    <string name="b_sa_01">Sign Up</string>
    <string name="b_sa_02">Log In</string>
    <string name="activity">Activity</string>
    <string name="news">News</string>
    <string name="gallery">Gallery</string>
    <string name="music">Music</string>
    <string name="profil">Profile</string>
    <string name="walk">Walking</string>
    <string name="run">Running</string>
    <string name="cycle">Cycling</string>
    <string name="hike">Hiking</string>
    <string name="stairs">Stairs Climbing</string>
    <string name="indoor_run">Indoor Running</string>
    <string name="aerobic">Aerobic</string>
    <string name="swim">Swimming</string>
    <string name="sleep">Sleep</string>
    <string name="tv_opa_pfl_01">PROFILE</string>
    <string name="tv_opa_pfl_02">Introduce yourself</string>
    <string name="tv_opa_pfl_03">Full Name</string>
    <string name="tv_opa_pfl_04">Nick Name</string>
    <string name="tv_opa_pfl_05">State</string>
    <string name="b_opa_pfl_01">NEXT</string>
    <string name="et_opa_pfl_01">Iman Danial</string>
    <string name="et_opa_pfl_02">Danial</string>
    <string name="tv_opa_phy_01">PHYSICAL</string>
    <string name="tv_opa_phy_02">Your BMI</string>
    <string name="b_opa_phy_03">Start</string>
    <string name="tv_opa_phy_03">Birth Year</string>
    <string name="tv_opa_phy_04">0</string>
    <string name="tv_opa_phy_05">Weight</string>
    <string name="tv_opa_phy_06">0 kg</string>
    <string name="tv_opa_phy_07">Height</string>
    <string name="tv_opa_phy_08">0 cm</string>
    <string name="profile">My Profile</string>
    <string name="name">Full Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="hight">Height</string>
    <string name="weight">Weight</string>
    <string name="birth">Birth Year</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="nationality">Nationality</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="signout">Sign Out</string>
    <string name="feedback">Feedback</string>
    <string name="tv_lpa_01">Welcome Back!</string>
    <string name="tv_lpa_02">Please sign-in to continue</string>
    <string name="tv_lpa_03">Phone Number</string>
    <string name="tv_lpa_04">Have problems?</string>
    <string name="tv_lpa_05">Contact Us</string>
    <string name="tv_lpa_06">Term &amp; Condition</string>
    <string name="tv_lpa_07">Privacy Policy</string>
    <string name="b_lpa_01">GO</string>
    <string name="tv_lpa_08">Sorry your phone number is not in our record</string>
    <string name="tv_lta_01">OTP Number has been sent to your phone via SMS. Insert the 6 digit OTP Number below</string>
    <string name="tv_lta_02">Did not receive OTP?</string>
    <string name="tv_lta_03">Resend in 3:25 minutes</string>
    <string name="tv_rda_01">300</string>
    <string name="tv_rda_00">ƒ</string>
    <string name="tv_rda_02">CLICK TO REDEEM</string>
    <string name="tv_rda_02_01">NOT AVAILABLE</string>
    <string name="tv_rda_02_02">INSUFFICIENT POINT</string>
    <string name="tv_rda_03">Tealive</string>
    <string name="tv_rda_05">24 days left</string>
    <string name="tv_rda_08">Description</string>
    <string name="tv_rda_09">Tealive Malaysia</string>
    <string name="tv_rda_10"><![CDATA[Terms & Conditions]]></string>
    <string name="tv_rda_11">1. This coupon only valid with 1 item purchases from a single outlet.\n2. This coupon can’t be traded for actual currency\n3. The use of this coupon is strictly for FitMY app users only.\n4. Do not misused or resell this coupon.</string>
    <string name="tv_rra_01">TextView</string>
    <string name="tv_rra_02">TextView</string>
    <string name="b_rra_02">DONE</string>
    <string name="b_da_ef_li_01">MORE</string>
    <string name="tv_da_ef_li_01">FUN RUN (5KM)</string>
    <string name="tv_da_ef_li_02">Kampung Dusun, Sementah</string>
    <string name="tv_da_ef_li_04">20 Nov 2019</string>
    <string name="b_da_rf_li_01">REDEEM</string>
    <string name="tv_da_rf_li_02">RM1.00 for second cup...</string>
    <string name="tv_da_rf_li_03">300</string>
    <string name="tv_da_rf_li_01">Tealive</string>
    <string name="tv_da_rf_li_00">ƒ</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="b_lpa2_01">CONTINUE</string>
    <string name="tv_lpa2_01">PREFERRED LANGUAGE</string>
    <string name="tv_lpa2_02">Please choose your language</string>
    <string-array name="s_opa_01">
        <item>Selangor</item>
        <item>WP Kuala Lumpur</item>
        <item>WP Putrajaya</item>
        <item>Johor</item>
        <item>Sarawak</item>
        <item>Sabah</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Pahang</item>
        <item>Negeri Sembilan</item>
        <item>Kedah</item>
        <item>Malacca</item>
        <item>Terengganu</item>
        <item>Kelantan</item>
        <item>WP Labuan</item>
        <item>Perlis</item>
    </string-array>
    <string-array name="s_lpa2_01">
        <item>Bahasa Malaysia</item>
        <item>English</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="titile_forgot">Forgot password</string>
    <string name="txt_forgot">Forgot password ?</string>
</resources>