<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
 >
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/b_opa_pfl_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_name"
        android:onClick="goBack"
        android:tint="@android:color/white"
        android:src="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_lpa_01"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_login_01" />

            <TextView
                android:id="@+id/tv_lpa_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_lpa_01"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_lpa_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_lpa_02"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_grey"
                android:ems="10"
                android:textColor="#000"
                android:backgroundTint="#fff"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/colorLightGrey"
                android:hint="@string/email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginTop="3dp"
                />



            <TextView
                android:id="@+id/tv_opa_pfl_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_grey"
                android:ems="10"
                android:textColor="#000"
                android:backgroundTint="#fff"
                android:layout_below="@+id/tv_opa_pfl_03"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/colorLightGrey"
                android:hint="@string/password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginTop="3dp"
                />


            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_rounded_orange"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/b_sa_02"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_forgot"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>



        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</ScrollView>