<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titile_forgot"
                android:textSize="15dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"

                />




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Enter_your_email"
                android:textSize="15dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <EditText

                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="15dp"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/spinner_bg"

                android:layout_marginTop="@dimen/_5sdp"
                />



        </LinearLayout>












        <RelativeLayout
            android:id="@+id/ok_rel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_rounded_orange"
            android:layout_marginTop="@dimen/_10sdp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ok"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cancel_rel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_rounded_orange"
            android:layout_marginTop="@dimen/_10sdp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                />


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>